# cvnip

./: .gitignore  CMakeLists.txt  Makefile  align.hpp  cvdaemon  cvdaemon.cpp  cvdaemon.service  cvdaemon.service.in  install.sh  main.cpp  run_cvdaemon.sh  translate.hpp
